--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- LEADERBROAD  -->
+    <!--   MAIN PAGE  -->
     <section class="main-page">
       <div class="container main-container">
         <h1 class="main-text">Main page</h1>
         <ul class="list main-list">
           <li class="main-item">
-            <a href="" class="main-link"><span class="main-number">1</span>Leaderboard</a>
+            <a href="./LEADERBOARD.html" class="main-link"><span class="main-number">1</span>Leaderboard</a>
           </li>
           <li class="main-item">
             <a href="" class="main-link"><span class="main-number">2</span>Learn</a>
