--- a/LEARN.html
+++ b/LEARN.html
@@ -24,16 +24,16 @@
     <section class="leader-page">
       <div class="container leader-container">
         <div class="text-icon">
-          <h1 class="leader-text">leaderboard</h1>
+          <h1 class="leader-text">learn to earn</h1>
           <a href="./index.html" class="link-close">
             <svg class="leader-icon">
               <use href="./sprite.svg#icon-close-mobile"></use>
             </svg>
           </a>
         </div>
-        <div class="img-quantity">
+        <div class="img-quantity learn-quantity">
           <button type="button" class="button button-position">
-            your position 100
+            how it work?
           </button>
           <p class="quantity">
             <img
@@ -47,8 +47,8 @@
         </div>
         <ul class="list main-list leader-list">
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">1</span>Jake
+            <a href="" class="main-link leader-style learn-size"
+              ><span class="main-number leader-number">1</span>Quastion
             <div class="img-price">
                 <img
                 src="./img/coin_10693087.png"
@@ -56,13 +56,13 @@
                 width="20"
                 height="20"
               />
-              <span class="price">150.300</span>
+              <span class="price">5.300</span>
             </div></a
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">2</span>Tom
+            <a href="" class="main-link leader-style learn-size"
+              ><span class="main-number leader-number">2</span>Quastion
             <div class="img-price">
                 <img
                 src="./img/coin_10693087.png"
@@ -70,13 +70,13 @@
                 width="20"
                 height="20"
               />
-              <span class="price">100.300</span>
+              <span class="price">5.300</span>
             </div></a
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">3</span>Leo
+            <a href="" class="main-link leader-style learn-size"
+              ><span class="main-number leader-number">3</span>Quastion
              <div class="img-price">
                <img
                 src="./img/coin_10693087.png"
@@ -84,13 +84,13 @@
                 width="20"
                 height="20"
               />
-              <span class="price">90.300</span>
+              <span class="price">5.300</span>
              </div></a
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">4</span>Max
+            <a href="" class="main-link leader-style learn-size"
+              ><span class="main-number leader-number">4</span>Quastion
            <div class="img-price">
                <img
                 src="./img/coin_10693087.png"
@@ -98,13 +98,13 @@
                 width="20"
                 height="20"
               />
-              <span class="price">75.300</span>
+              <span class="price">5.300</span>
            </div></a
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">5</span>Ben
+            <a href="" class="main-link leader-style learn-size"
+              ><span class="main-number leader-number">5</span>Quastion
             <div class="img-price">
                 <img
                 src="./img/coin_10693087.png"
@@ -112,13 +112,13 @@
                 width="20"
                 height="20"
               />
-              <span class="price">65.300</span>
+              <span class="price">5.300</span>
             </div></a
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">6</span>ALex
+            <a href="" class="main-link leader-style learn-size"
+              ><span class="main-number leader-number">6</span>Quastion
             <div class="img-price">
                 <img
                 src="./img/coin_10693087.png"
@@ -126,13 +126,13 @@
                 width="20"
                 height="20"
               />
-              <span class="price">55.300</span>
+              <span class="price">5.300</span>
             </div></a
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">7</span>Den
+            <a href="" class="main-link leader-style learn-size"
+              ><span class="main-number leader-number">7</span>Quastion
               <div class="img-price">
                 <img
                   src="./img/coin_10693087.png"
@@ -140,7 +140,7 @@
                   width="20"
                   height="20"
                 />
-                <span class="price">40.300</span>
+                <span class="price">5.300</span>
               </div></a
             >
           </li>
