--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="./LEADERBOARD.html" class="main-link"><span class="main-number">1</span>Leaderboard</a>
           </li>
           <li class="main-item">
-            <a href="" class="main-link"><span class="main-number">2</span>Learn</a>
+            <a href="./LEARN.html" class="main-link"><span class="main-number">2</span>Learn</a>
           </li>
           <li class="main-item">
             <a href="" class="main-link"><span class="main-number">3</span>Booster</a>
