--- a/LEARN.html
+++ b/LEARN.html
@@ -89,7 +89,7 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style learn-size"
+            <a href="./QUESTION-1.html" class="main-link leader-style learn-size"
               ><span class="main-number leader-number">4</span>Quastion
            <div class="img-price">
                <img
