added fixes of sections

--- a/LEADERBOARD.html
+++ b/LEADERBOARD.html
@@ -22,7 +22,7 @@
   <body>
     <!-- LEADERBROAD  -->
     <section class="leader-page">
-      <div class="container leader-container">
+      <div class="container">
         <div class="text-icon">
           <h1 class="leader-text">leaderboard</h1>
           <a href="./index.html" class="link-close">
@@ -45,10 +45,10 @@
             5.300
           </p>
         </div>
-        <ul class="list main-list leader-list">
+        <ul class="list main-list">
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">1</span>Jake
+            <a href="" class="main-link"
+              ><span class="main-number">1</span>Jake
             <div class="img-price">
                 <img
                 src="./img/coin_10693087.png"
@@ -61,8 +61,8 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">2</span>Tom
+            <a href="" class="main-link"
+              ><span class="main-number">2</span>Tom
             <div class="img-price">
                 <img
                 src="./img/coin_10693087.png"
@@ -75,8 +75,8 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">3</span>Leo
+            <a href="" class="main-link"
+              ><span class="main-number">3</span>Leo
              <div class="img-price">
                <img
                 src="./img/coin_10693087.png"
@@ -89,8 +89,8 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">4</span>Max
+            <a href="" class="main-link"
+              ><span class="main-number">4</span>Max
            <div class="img-price">
                <img
                 src="./img/coin_10693087.png"
@@ -103,8 +103,8 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">5</span>Ben
+            <a href="" class="main-link"
+              ><span class="main-number">5</span>Ben
             <div class="img-price">
                 <img
                 src="./img/coin_10693087.png"
@@ -117,8 +117,8 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">6</span>ALex
+            <a href="" class="main-link"
+              ><span class="main-number">6</span>ALex
             <div class="img-price">
                 <img
                 src="./img/coin_10693087.png"
@@ -131,8 +131,8 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style"
-              ><span class="main-number leader-number">7</span>Den
+            <a href="" class="main-link"
+              ><span class="main-number">7</span>Den
               <div class="img-price">
                 <img
                   src="./img/coin_10693087.png"
