--- a/LEARN.html
+++ b/LEARN.html
@@ -20,9 +20,9 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- LEADERBROAD  -->
-    <section class="leader-page">
-      <div class="container leader-container">
+    <!-- LEARN  -->
+    <section class="leader-page learn-page">
+      <div class="container">
         <div class="text-icon">
           <h1 class="leader-text">learn to earn</h1>
           <a href="./index.html" class="link-close">
@@ -31,7 +31,7 @@
             </svg>
           </a>
         </div>
-        <div class="img-quantity learn-quantity">
+        <div class="img-quantity">
           <button type="button" class="button button-position">
             how it work?
           </button>
@@ -45,9 +45,9 @@
             5.300
           </p>
         </div>
-        <ul class="list main-list leader-list">
+        <ul class="list main-list">
           <li class="main-item">
-            <a href="" class="main-link leader-style learn-size"
+            <a href="" class="main-link learn-size"
               ><span class="main-number leader-number">1</span>Quastion
             <div class="img-price">
                 <img
@@ -61,7 +61,7 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style learn-size"
+            <a href="" class="main-link learn-size"
               ><span class="main-number leader-number">2</span>Quastion
             <div class="img-price">
                 <img
@@ -75,7 +75,7 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style learn-size"
+            <a href="" class="main-link learn-size"
               ><span class="main-number leader-number">3</span>Quastion
              <div class="img-price">
                <img
@@ -89,7 +89,7 @@
             >
           </li>
           <li class="main-item">
-            <a href="./QUESTION-1.html" class="main-link leader-style learn-size"
+            <a href="./QUESTION-1.html" class="main-link learn-size"
               ><span class="main-number leader-number">4</span>Quastion
            <div class="img-price">
                <img
@@ -103,7 +103,7 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style learn-size"
+            <a href="" class="main-link learn-size"
               ><span class="main-number leader-number">5</span>Quastion
             <div class="img-price">
                 <img
@@ -117,7 +117,7 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style learn-size"
+            <a href="" class="main-link learn-size"
               ><span class="main-number leader-number">6</span>Quastion
             <div class="img-price">
                 <img
@@ -131,7 +131,7 @@
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style learn-size"
+            <a href="" class="main-link"
               ><span class="main-number leader-number">7</span>Quastion
               <div class="img-price">
                 <img
