--- a/QUESTION-1.html
+++ b/QUESTION-1.html
@@ -20,9 +20,9 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- LEADERBROAD  -->
+    <!-- QUESTION-1  -->
     <section class="leader-page question-page">
-      <div class="container leader-container">
+      <div class="container">
         <div class="text-icon">
           <h1 class="leader-text">question 1</h1>
           <a href="./index.html" class="link-close">
@@ -34,25 +34,25 @@
       <h2 class="question-title">what is blockchain?</h2>
         <ul class="list main-list">
           <li class="main-item">
-            <a href="" class="main-link leader-style "
+            <a href="" class="main-link"
               ><span class="main-number leader-number">a</span>digital database
           </a
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style "
+            <a href="" class="main-link"
               ><span class="main-number leader-number">b</span>anchor chain on a ship
          </a
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style "
+            <a href="" class="main-link"
               ><span class="main-number leader-number">c</span>jewelry for the neck
            </a
             >
           </li>
           <li class="main-item">
-            <a href="" class="main-link leader-style "
+            <a href="" class="main-link"
               ><span class="main-number leader-number">c</span>it is a bitcoin
           </a
             >
