--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!--   MAIN PAGE  -->
     <section class="main-page">
-      <div class="container main-container">
+      <div class="container">
         <h1 class="main-text">Main page</h1>
         <ul class="list main-list">
           <li class="main-item">
