--- a/LEARN-BG.html
+++ b/LEARN-BG.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- LEARN  -->
-    <section class="leader-page learn-page">
+    <!-- LEARN-BG -->
+    <section class="leader-page learn-page bg-page">
       <div class="container">
         <div class="text-icon">
           <h1 class="leader-text">learn to earn</h1>
@@ -90,7 +90,7 @@
           </li>
           <li class="main-item">
             <a href="./QUESTION-1.html" class="main-link"
-              ><span class="main-number">4</span>Quastion
+              ><span class="main-number bg-number">4</span>Quastion
            <div class="img-price">
                <img
                 src="./img/coin_10693087.png"
