--- a/QUESTION-1.html
+++ b/QUESTION-1.html
@@ -34,26 +34,26 @@
       <h2 class="question-title">what is blockchain?</h2>
         <ul class="list main-list">
           <li class="main-item">
-            <a href="" class="main-link"
-              ><span class="main-number leader-number">a</span>digital database
+            <a href="./LEARN-BG.html" class="main-link"
+              ><span class="main-number">a</span>digital database
           </a
             >
           </li>
           <li class="main-item">
             <a href="" class="main-link"
-              ><span class="main-number leader-number">b</span>anchor chain on a ship
+              ><span class="main-number">b</span>anchor chain on a ship
          </a
             >
           </li>
           <li class="main-item">
             <a href="" class="main-link"
-              ><span class="main-number leader-number">c</span>jewelry for the neck
+              ><span class="main-number">c</span>jewelry for the neck
            </a
             >
           </li>
           <li class="main-item">
             <a href="" class="main-link"
-              ><span class="main-number leader-number">c</span>it is a bitcoin
+              ><span class="main-number">c</span>it is a bitcoin
           </a
             >
           </li>
