--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="./LEARN.html" class="main-link"><span class="main-number">2</span>Learn</a>
           </li>
           <li class="main-item">
-            <a href="" class="main-link"><span class="main-number">3</span>Booster</a>
+            <a href="./UPGRADES.html" class="main-link"><span class="main-number">3</span>Booster</a>
           </li>
           <li class="main-item">
             <a href="" class="main-link"><span class="main-number">4</span>Earn</a>
