--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="./UPGRADES.html" class="main-link"><span class="main-number">3</span>Booster</a>
           </li>
           <li class="main-item">
-            <a href="" class="main-link"><span class="main-number">4</span>Earn</a>
+            <a href="./MISSIONS.html" class="main-link"><span class="main-number">4</span>Earn</a>
           </li>
           <li class="main-item">
             <a href="" class="main-link"><span class="main-number">5</span>Bosses</a>
