fixes UPGRADES, MISSIONS

--- a/UPGRADES.html
+++ b/UPGRADES.html
@@ -47,7 +47,7 @@
         </div>
         <ul class="list main-list">
           <li class="main-item">
-            <a href="" class="main-link"
+            <a href="" class="main-link upgrades-link"
               >Damage
             <div class="img-price">
                 <img
