--- a/MISSIONS.html
+++ b/MISSIONS.html
@@ -32,9 +32,9 @@
           </a>
         </div>
         <div class="img-quantity">
-          <button type="button" class="button button-position">
+          <a href="./EARN-MORE-WITH-TASKS.html" class="link-position">
             how it work?
-          </button>
+          </a>
           <p class="quantity">
             <img
               src="./img/coin_10693087.png"
@@ -44,7 +44,7 @@
             />
             5.300
           </p>
-        </div>
+                </div>
         <ul class="list main-list">
           <li class="main-item">
             <a href="" class="main-link"
